--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/partials/_wc-container.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/partials/_wc-container.scss
@@ -12,7 +12,7 @@ section {
     }
 
     &.single_summary_container {
-        @apply flex flex-col md:flex-row gap-y-10 space-x-32 items-start container;
+        @apply flex flex-col md:flex-row gap-y-10 space-x-32 items-start md:justify-between container;
 
         .tabs-navigation {
             @apply flex items-center gap-6 border-b-2 border-gray-200 mb-10;
@@ -32,4 +32,6 @@ section {
         }
     }
 }
+
+
 
