--- a/wp-content/themes/socialbrothers/src/styles/styles.scss
+++ b/wp-content/themes/socialbrothers/src/styles/styles.scss
@@ -26,6 +26,8 @@
 
 @use "./woocommerce/partials/wc-product-meta";
 
+@use "./woocommerce/partials/wc-breadcrums";
+
 @use "./woocommerce/partials/wc-typography";
 
 @use "./woocommerce/partials/wc-container";
