--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-form.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-form.scss
@@ -16,7 +16,11 @@ form {
         @apply w-full p-4 border border-gray-200 rounded-s;
     }
 
-    input[type=submit] {
-        @apply btn;
-    }
+}
+
+input[type=submit], button[type=submit], input[type=button] {
+    @apply btn; 
+}
+input[type=text] {
+    @apply  w-full p-2 border-2 border-gray-200 min-h-12;
 }
