--- a/wp-content/themes/socialbrothers/src/styles/styles.scss
+++ b/wp-content/themes/socialbrothers/src/styles/styles.scss
@@ -18,6 +18,7 @@
 
 @use "components/menu-simple";
 
+
 @use "./woocommerce/wc-form";
 
 @use "./woocommerce/wc-archive";
@@ -25,6 +26,8 @@
 @use "./woocommerce/wc-single-product";
 
 @use "./woocommerce/wc-product-card";
+
+@use "./woocommerce/wc-sidebar";
 
 @use "./woocommerce/partials/wc-product-meta";
 
