Changed name of folder structure

--- a/wp-content/themes/socialbrothers/templates/twig/organisms/hero.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/hero.twig
@@ -9,7 +9,7 @@
 <section class='w-screen p-2 py-10 md:p-10 md:py-20'>
 	<div class='flex flex-col items-center md:flex-row gap-10 mx-auto justify-center container'>
 		<section class='flex flex-col md:w-1/2 w-full space-y-8'>
-			{% include 'modules/side-content.twig' with content_block %}
+			{% include 'molecules/side-content.twig' with content_block %}
 		</section>
 
 		<figure>
