--- a/wp-content/themes/socialbrothers/templates/twig/atoms/icon.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/icon.twig
@@ -1,5 +1,5 @@
 {% if icon %}
-	<div class="flex justify-{{ align }} {{ size }} {{ color }}">	
+	<div class="flex justify-{{ align }} {{ size }} {{ color }} {{ addition_classes }}">	
 		<span class="material-symbols-rounded">{{ icon }}</span>
 	</div>
 {% endif %}
