--- a/wp-content/themes/socialbrothers/templates/twig/molecules/review.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/molecules/review.twig
@@ -11,7 +11,7 @@
                 size  : 'text-2xl',
             } %}
         {% endif %}
-        <p class='font-bold mb-0'><{{ 'Trustpilot'|translatable }}</p>
+        <p class='font-bold mb-0'>{{ 'Trustpilot'|translatable }}</p>
     </div>
 
     <div class='flex items-center w-fit relative'>
