header changed and added wc header

--- a/wp-content/themes/socialbrothers/src/styles/base/_buttons.scss
+++ b/wp-content/themes/socialbrothers/src/styles/base/_buttons.scss
@@ -30,8 +30,7 @@
   }
 
   &--disabled {
-
-    @apply bg-neutral-25 cursor-not-allowed;
+    @apply bg-neutral-25 cursor-not-allowed border-transparent;
 
     &:hover {
       @apply border-b-transparent border-transparent;
