--- a/wp-content/themes/socialbrothers/templates/twig/atoms/link.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/atoms/link.twig
@@ -1,5 +1,5 @@
 {% if url %}
-<a href='{{ url }}' class='underline hover:no-underline font-bold' target='{{ target|default('_self') }}'>
+<a href='{{ url }}' class='{{ additional_classes }}' target='{{ target|default('_self') }}'>
 		{% if icon %}
 			{% include 'atoms/icon.twig' %}
 		{% endif %}
