--- a/wp-content/themes/socialbrothers/templates/twig/organisms/header.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/header.twig
@@ -57,8 +57,8 @@
                 </nav>
                 <div class='flex flex-row items-center space-x-8'>
                     <div class='hidden md:block'>
-                        <input type='checkbox' name='search_toggle' id='search_toggle' class='hidden'/>
-                        <label for='search_toggle' class='flex items-center gap-2 cursor-pointer'>
+                        <input type='checkbox' name='search-toggle' id='search-toggle' class='hidden'/>
+                        <label for='search-toggle' class='flex items-center gap-2 cursor-pointer'>
                             {% include 'atoms/icon.twig' with {
                         icon: 'search',
                         color: 'text-primary',
