--- a/wp-content/themes/socialbrothers/templates/twig/molecules/company-info.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/molecules/company-info.twig
@@ -1,4 +1,4 @@
-<div class="grid gap-2">
+<div class="grid gap-2 pb-8 border-b border-neutral-25">
     <h6 class="title mb-0">{{ info_label }}</h6>
         {% include 'atoms/text.twig' with {text: content|raw} %}
         {% if link %}
