--- a/wp-content/themes/socialbrothers/templates/twig/organisms/form.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/form.twig
@@ -1,5 +1,5 @@
 <section id="{{ anchor }}" class="{{ class_name }} ">
-    <div class="conatiner">
+    <div class="container">
         {% include 'molecules/form-card.twig' with {
             float: TRUE,
         } %}
