--- a/wp-content/themes/socialbrothers/templates/twig/molecules/side-content.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/molecules/side-content.twig
@@ -4,6 +4,8 @@
 {% if title != '' %}
     <h2 class= '{{ title_size }} my-4'>{{ title }}</h2>
 {% endif %}
+{% include 'atoms/text.twig' with { text: content|raw } %}
+
 <div class='flex gap-5 mt-4'>
     {% if buttons %}
         {% for button in buttons %}
