--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-product-card.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-product-card.scss
@@ -1,6 +1,6 @@
 .overview {
     li {
-        @apply grid gap-6 border border-gray-200 rounded-s mb-10 md:w-56 relative;
+        @apply grid gap-6 border border-gray-200 rounded-s mb-10 md:max-w-56 relative;
 
         &:hover {
             @apply text-primary-dark;
