--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-sidebar.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-sidebar.scss
@@ -2,7 +2,7 @@
   @apply md:max-w-80 md:basis-2/6 hidden md:block absolute md:relative top-0 right-0 bg-white p-2 z-20;
 
   &.show {
-    @apply md:static block;
+    @apply md:static block w-full;
   }
 
   .title {
@@ -60,7 +60,7 @@
   }
 }
 
-.facetwp-type-number-range {
+.facetwp-type-number_range {
   @apply flex items-center justify-between gap-2;
 
   &.hidden {
