checking for deploy issue

--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-archive.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-archive.scss
@@ -13,7 +13,9 @@
 
     .prev,
     .next {
-      @apply btn btn--outline text-2xl font-thin font-iconRound;
+      @apply text-2xl font-thin font-iconRound hover:bg-primary hover:text-white;
+      @apply py-[10px] px-4 border-2 justify-center uppercase no-underline font-bold rounded-[4px] inline-flex gap-2 leading-4 border-primary  text-primary transition-colors items-center min-h-[48px];
+      
     }
 
     .current {
