--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-form.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-form.scss
@@ -22,7 +22,8 @@ form {
 input[type="submit"],
 button[type="submit"]:not(.search-button),
 input[type="button"] {
-  @apply btn; 
+    @apply py-[10px] px-4 border-2 justify-center uppercase no-underline font-bold rounded-[4px] inline-flex gap-2 leading-4 border-primary bg-primary text-white transition-colors items-center min-h-[48px];
+
 }
 
 input[type="text"] {
