--- a/wp-content/themes/socialbrothers/templates/twig/organisms/404.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/organisms/404.twig
@@ -11,7 +11,7 @@
 
         <div class='max-w-96 space-y-10'>
             {% if title != '' %}
-                <h1 class= 'title title__groot my-4'>{{ title }}</h1>
+                <h1 class= 'title-size title-size__groot my-4'>{{ title }}</h1>
             {% endif %}
 
             {% include 'atoms/text.twig' with {'text': content|raw} %}
