title and function name changed

--- a/wp-content/themes/socialbrothers/templates/twig/molecules/contact-link.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/molecules/contact-link.twig
@@ -1,6 +1,6 @@
 
 {% if label %}
-    <p class='title-size title-size__medium'>{{ label }} </p>
+    <p class='h-size h-size__medium'>{{ label }} </p>
 {% endif %}
 <div class="flex items-center my-2 gap-2">
     {% if icon %}
