--- a/wp-content/themes/socialbrothers/templates/twig/molecules/social-links.twig
+++ b/wp-content/themes/socialbrothers/templates/twig/molecules/social-links.twig
@@ -1,5 +1,5 @@
 <div class="grid gap-2">
-    <h6 class="title-size font-body mb-0">{{ 'Volg ons'|translatable }}</h6>
+    <h6 class="h-size font-body mb-0">{{ 'Volg ons'|translatable }}</h6>
     {% for social in company_socials %}
         {% include 'atoms/social-link.twig' with social %}
     {% endfor %}
