--- a/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-product-card.scss
+++ b/wp-content/themes/socialbrothers/src/styles/woocommerce/_wc-product-card.scss
@@ -18,7 +18,7 @@
             @apply flex flex-col h-full;
 
             .woocommerce-loop-product__title {
-                @apply h-size h-size__small-medium;
+                @apply text-xl font-bold;
             }
 
             &__content {
